; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/mujs/extr_jsrepr.c_reprnum.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/mujs/extr_jsrepr.c_reprnum.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [3 x i8] c"-0\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32**, double)* @reprnum to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @reprnum(i32* %0, i32** %1, double %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32**, align 8
  %6 = alloca double, align 8
  %7 = alloca [40 x i8], align 16
  store i32* %0, i32** %4, align 8
  store i32** %1, i32*** %5, align 8
  store double %2, double* %6, align 8
  %8 = load double, double* %6, align 8
  %9 = fcmp oeq double %8, 0.000000e+00
  br i1 %9, label %10, label %18

10:                                               ; preds = %3
  %11 = load double, double* %6, align 8
  %12 = call i64 @signbit(double %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %18

14:                                               ; preds = %10
  %15 = load i32*, i32** %4, align 8
  %16 = load i32**, i32*** %5, align 8
  %17 = call i32 @js_puts(i32* %15, i32** %16, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  br label %26

18:                                               ; preds = %10, %3
  %19 = load i32*, i32** %4, align 8
  %20 = load i32**, i32*** %5, align 8
  %21 = load i32*, i32** %4, align 8
  %22 = getelementptr inbounds [40 x i8], [40 x i8]* %7, i64 0, i64 0
  %23 = load double, double* %6, align 8
  %24 = call i8* @jsV_numbertostring(i32* %21, i8* %22, double %23)
  %25 = call i32 @js_puts(i32* %19, i32** %20, i8* %24)
  br label %26

26:                                               ; preds = %18, %14
  ret void
}

declare dso_local i64 @signbit(double) #1

declare dso_local i32 @js_puts(i32*, i32**, i8*) #1

declare dso_local i8* @jsV_numbertostring(i32*, i8*, double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
